--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!--<header></header> Place for the header component-->
+<app-header></app-header>
 <router-outlet></router-outlet>
 <footer class="bg-dark text-white text-center py-2">ByteMarket</footer>
