--- a/frontend/src/app/components/product/other-product-list/other-product-list.component.html
+++ b/frontend/src/app/components/product/other-product-list/other-product-list.component.html
@@ -1,1 +1,32 @@
-<p>other-product-list works!</p>
+<section class="py-4">
+    <div class="container otherProdContainer">
+        <div class="">
+            <h2 class="fw-bolder mb-3">Otros productos</h2>
+        </div>
+        <div class="row otherProducts" id="products-list">
+            <ng-template ngFor  let-product [ngForOf]="products">
+                <div *ngIf="!product.sold" class="otherProduct col-3">
+                    <a [routerLink]="'/product/' + product.id" style="text-decoration: none;">
+                        <div class="productCard card h-100">
+                            <img class="card-img-top" [src]="product.thumbnail" [alt]="product.name" />
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <h5 class="fw-bolder">{{product.name}}</h5>
+                                    {{product.price}}€
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </ng-template>
+        </div>
+    </div>
+
+    <div *ngIf="!isLast" class="d-flex justify-content-center">
+        <button class="btn btn-custom" id="load-more" type="button" (click)="loadMore()">
+            <span>Cargar más</span>
+            <span *ngIf="isLoading" id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status"></span>
+        </button>
+    </div>
+
+</section>
