--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container px-4 px-lg-5 navbarContent">
-    <!-- Este es el botón para seleccionar "Inicio" -->
-    <a class="navbar-brand" href="/" (click)="selectCategory('')">Inicio</a>
+    <!-- Este es el botón para seleccionar "Inicio" sin recargar -->
+    <a class="navbar-brand" role="button" (click)="selectCategory('')">Inicio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
