view chats and messages

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -84,8 +84,7 @@
                         </button>
                     </div>
                     <div>
-                        <button class="btn btn-outline-dark btn-custom headerButton" type="button"
-                            onclick="window.location.href='/chat'">
+                        <button class="btn btn-outline-dark btn-custom headerButton" type="button" [routerLink]="['/chats']">
                             <i class="bi bi-chat-fill"></i>
                             <span class="fav-sellText"> Chats</span>
                         </button>
