sell product with a confirmation screen

--- a/frontend/src/app/components/chats/chat/chat.component.html
+++ b/frontend/src/app/components/chats/chat/chat.component.html
@@ -31,7 +31,7 @@
                   <button
                     *ngIf="!chat.product.sold"
                     class="btn btn-custom ms-2"
-                    (click)="sellProduct(chat.id)">
+                    (click)="goToConfirmSale(chat.id)">
                     Vender
                   </button>
                   <button
