--- a/frontend/src/app/components/product/product-list/product-list.component.html
+++ b/frontend/src/app/components/product/product-list/product-list.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <div *ngIf="!isLast" class="d-flex justify-content-center">
-        <button class="btn btn-custom" id="load-more" type="button" (click)="loadMore()">
+        <button class="btn btn-custom" id="load-more" type="button" (click)="fromParent ? loadMoreFromParent() : loadMore()">
             <span>Cargar más</span>
             <span *ngIf="isLoading" id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status"></span>
         </button>
